--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
     
+    - name: Checkout
+      uses: actions/checkout@v2
+      
     - name: Install fpm
       run: |
         sudo apt-get install ruby ruby-dev rubygems build-essential
@@ -16,4 +19,4 @@ jobs:
 
     - name: Test fpm
       run: |
-        fpm --version
+        ./test.sh
