--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install fpm
       run: |
-        sudo apt-get install ruby ruby-dev rubygems build-essential
+        sudo apt-get install ruby ruby-dev rubygems build-essential bsdtar
         sudo gem install --no-document fpm
 
     - name: Test fpm
